# ugv_bot

./: README.md  毕业设计实现.md
adaptive_fusion_bringup/: CMakeLists.txt  package.xml
adaptive_fusion_bringup/launch/: bringup.launch.py  comparison_experiment.launch.py
adaptive_fusion_description/: CMakeLists.txt  package.xml
adaptive_fusion_ekf/: package.xml  setup.cfg  setup.py
adaptive_fusion_ekf/adaptive_fusion_ekf/: ekf_fusion_node.py
adaptive_fusion_ekf/config/: ekf_params.yaml  ekf_params_dual_adaptive_comparison.yaml  ekf_params_fixed_comparison.yaml  ekf_params_formal_comparison.yaml  ekf_params_only_slam_comparison.yaml  ekf_params_only_uwb_comparison.yaml  ekf_params_slam_adaptive_comparison.yaml  ekf_params_uwb_adaptive_comparison.yaml
adaptive_fusion_ekf/launch/: ekf.launch.py
adaptive_fusion_eval/: package.xml  setup.cfg  setup.py
adaptive_fusion_eval/adaptive_fusion_eval/: eval_node.py
adaptive_fusion_eval/launch/: eval.launch.py
adaptive_fusion_gazebo/: CMakeLists.txt  package.xml
adaptive_fusion_gazebo/config/: uwb_pose.yaml  uwb_pose_clean.yaml  uwb_pose_formal_comparison.yaml
adaptive_fusion_gazebo/launch/: spawn_car.launch.py
adaptive_fusion_msgs/: CMakeLists.txt  package.xml
adaptive_fusion_navigation/: package.xml  setup.cfg  setup.py
adaptive_fusion_navigation/config/: nav2_fusion_params.yaml
adaptive_fusion_navigation/launch/: nav2_bringup_map.launch.py  nav2_navigation.launch.py
adaptive_fusion_slam_adapter/: package.xml  setup.cfg  setup.py
adaptive_fusion_uwb/: package.xml  setup.cfg  setup.py
log/: latest_list
(+11 files in other folders)
