<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>adaptive_fusion_bringup</name>
  <version>0.0.0</version>
  <description>Unified bringup launch files for adaptive fusion simulation and navigation</description>
  <maintainer email="wx3515753265@gmail.com">xuan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rviz2</depend>
  <depend>nav2_bringup</depend>
  <depend>adaptive_fusion_gazebo</depend>
  <depend>adaptive_fusion_slam_adapter</depend>
  <depend>adaptive_fusion_uwb</depend>
  <depend>adaptive_fusion_ekf</depend>
  <depend>adaptive_fusion_navigation</depend>
  <depend>adaptive_fusion_eval</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
